fix spacing on case report detail

--- a/casereport/static/css/cases.css
+++ b/casereport/static/css/cases.css
@@ -1087,6 +1087,7 @@ input:focus + div.info {
 	font-weight: bold;
 	margin-bottom: 30px;
 }
+
 .case-detail-view .menu,
 .case-detail-view .content {
 	padding-top: 25px;
@@ -1097,6 +1098,10 @@ input:focus + div.info {
 .case-detail-view .content {
 	border-left: 1px solid #eeeeee;
 	padding-left: 30px;
+}
+.case-detail-view {
+	padding-top: 25px;
+
 }
 .case-detail-view h4 {
 	text-transform: uppercase;
